# TP-NFS-Grupo14

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.sh  editor.sh  editorMapLibertyCity.yaml  server.sh
MapBoundary/: ColisionesLibertyCity.yaml  CollisionTest2.yaml  MapaLibertyCity.yaml  MapaSanAndreas.yaml  MapaViceCity.yaml
assets/cars/cars_images/: camionetaAzul.avif
assets/hud/: barra_de_vida.avif
client/: CMakeLists.txt  client.cpp  client.h  client_game.cpp  client_game.h  client_protocol.cpp  client_protocol.h  constants.h  main.cpp  protocol_client.cpp  protocol_client.h
client/Game/: CMakeLists.txt  car_info_game.h  car_position.h  client_game.cpp  client_game.h  client_helper.cpp  client_helper.h  constants.h  game_hud.cpp  game_hud.h  info_game.h  intermission.cpp  intermission.h
client/Game/resources/: CMakeLists.txt  car_sprite_sheet.cpp  car_sprite_sheet.h  cheat_detector.cpp  cheat_detector.h  event_resolver.cpp  event_resolver.h  hint.cpp  hint.h  intermission.cpp  intermission.h  life.cpp  life.h  life_bar.cpp  life_bar.h  life_hud.cpp  life_hud.h  maps_textures.cpp  maps_textures.h  mini_map_hud.cpp  mini_map_hud.h  position_hud.cpp  position_hud.h  speed_hud.cpp  speed_hud.h  time_hud.cpp  time_hud.h
client/Game/resources/hud/: CMakeLists.txt  checkpoint.cpp  checkpoint.h  hint.cpp  hint.h  icon_improvement_manager.cpp  icon_improvement_manager.h  life_bar.cpp  life_bar.h  life_hud.cpp  life_hud.h  mini_map_hud.cpp  mini_map_hud.h  position_hud.cpp  position_hud.h  speed_hud.cpp  speed_hud.h  time_hud.cpp  time_hud.h
client/Game/sdl_wrappers/: CMakeLists.txt  SdlAudioManager.cpp  SdlAudioManager.h  SdlBaseTexture.cpp  SdlDrawFill.cpp  SdlDrawFill.h  SdlFont.cpp  SdlFont.h  SdlMapTexture.cpp  SdlObjTexture.cpp  SdlObjTexture.h  SdlWindow.cpp
client/Game/utils/: CMakeLists.txt  add_text.cpp  time_formatter.cpp  time_formatter.h
client/QT/: CMakeLists.txt  editor_map_screen.cpp  editor_map_screen.h  game_window.cpp  game_window.h  lobby_screen.cpp  lobby_screen.h  lobby_window.cpp  lobby_window.h  login_screen.cpp  login_screen.h  login_window.cpp  login_window.h  menu_screen.cpp  menu_screen.h  result_finish_screen.cpp  result_finish_screen.h  result_finish_window.cpp  result_finish_window.h  selection_car_screen.cpp  selection_car_screen.h  selection_map_screen.cpp  selection_map_screen.h  start_screen.cpp  start_screen.h  waiting_room_screen.cpp  waiting_room_screen.h  waiting_room_window.cpp  waiting_room_window.h
client/connection/: CMakeLists.txt  server_handler.cpp  server_handler.h  server_thread_recv.cpp  server_thread_recv.h  server_thread_send.cpp  server_thread_send.h
client/resources/: CMakeLists.txt  car_sprite_sheet.cpp  car_sprite_sheet.h  life.cpp  maps_textures.h
client/sdl_wrappers/: CMakeLists.txt  SdlBaseTexture.cpp  SdlBaseTexture.h  SdlDrawFill.cpp  SdlDrawFill.h  SdlException.h  SdlFont.cpp  SdlMapTexture.cpp  SdlMapTexture.h  SdlObjTexture.cpp  SdlObjTexture.h  SdlWindow.h
client/utils/: Area.cpp  Area.h  CMakeLists.txt  add_text.cpp  add_text.h  car_sprite_sheet.cpp  car_sprite_sheet.h  life_bar.cpp  life_bar.h  maps_textures.cpp  maps_textures.h  rgb.cpp  rgb.h
common/: CMakeLists.txt  base_protocol.h  car_model.h  constant_rate_loop.cpp  constant_rate_loop.h  constant_rate_loop_server.cpp  constant_rate_loop_server.h  constants.h  liberror.cpp  player_aux.h  pose.h  resolver.cpp  socket.cpp
common/dto/: CMakeLists.txt  car_improvement.h  car_info.h  client_msg.h  input_state.h  map_config.h  map_tick_info.h  movement.h  player_info.h  results_info.h  room_info.h  server_msg.cpp  server_msg.h
common/enum/: CMakeLists.txt  car_enum.h  car_improvement.h  event.h  map_enum.h
config/: server_config.yml
editor/: CMakeLists.txt  clickable_image.cpp  clickable_image.h  editor_choose_map.cpp  editor_choose_map.h  editor_menu.cpp  editor_menu.h  editor_window.cpp  editor_window.h  main.cpp
editor/BaseMap/: BaseMapaLibertyCity.yaml  BaseMapaSanAndreas.yaml
editor/MapsEdited/: Pruebas.yaml  editorMapLibertyCity.yaml  elpeeeeeeee.yaml
info/: Game.plantuml  Game_Secuencia_Crear_Sala.plantuml  Movimiento.plantuml  Secuencia.puml  info.md  protocolos.md
server/: CMakeLists.txt  Match.cpp  Match.h  acceptor.cpp  acceptor.h  binding_manager.cpp  binding_manager.h  car.cpp  car.h  city.cpp  city.h  client_action.h  client_handler.cpp  client_handler.h  client_list.cpp  client_list.h  client_thread_recv.cpp  client_thread_recv.h  client_thread_send.cpp  client_thread_send.h  game.cpp  game.h  gameloop.cpp  gameloop.h  main.cpp  monitor_lobby.cpp  monitor_lobby.h  pending_manager.cpp  pending_manager.h  physics_world.cpp  physics_world.h  player.cpp  player.h  protocol_server.cpp  protocol_server.h  race.cpp  race.h  race_participant.h  room_manager.cpp  room_manager.h  (+5 more)
server/Player/: CMakeLists.txt  car.cpp  car.h  player.cpp  player.h
server/game/: CMakeLists.txt  city.cpp  city.h  game.cpp  game.h  gameloop.cpp  gameloop.h  garage.cpp  garage.h  market.cpp  market.h  market_info.h  market_phase.cpp  market_phase.h  npc.h  race.cpp  race.h  race_info.h  race_participant.h  result.cpp  result.h
server/map/: CMakeLists.txt  map_config_loader.cpp  map_config_loader.h
server/physics/: CMakeLists.txt  Car.h  Entidad.h  border_entity.cpp  border_entity.h  building_entity.cpp  building_entity.h  checkpoint_entity.cpp  checkpoint_entity.h  checkpoint_event.h  contact_listener.cpp  contact_listener.h  damage_event.h  physics_world.cpp  physics_world.h
tests/: CMakeLists.txt  main_tests.cpp  protocol_tests.cpp  protocol_tests.h
